# lighthouse

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  Vagrantfile  build.rs  compose.yaml  readme.adoc  tailwind.config.js
assets/config/: content.toml  server.toml
assets/styles/: input.css
demo/: compose.yaml
demo/assets/config/: content.toml  images.toml  server.toml
src/: config.rs  handlers.rs  main.rs
templates/: base.html.jinja  footer.html.jinja  home.html.jinja  images.html.jinja  tile.html.jinja
