[package]
name = "lighthouse"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.4"
readonly = "0.2.12"
serde = { version = "1.0.202", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.13"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
